objects/hed__Trigger_Handler__c.object
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <label>Trigger Handler</label>
    <nameField>
        <label>Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Class__c</fullName>
        <description>The name of the class to run.</description>
        <inlineHelpText>The name of the class to run.</inlineHelpText>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this Trigger Handler is in use.</description>
        <inlineHelpText>Indicates whether this Trigger Handler is in use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Object__c</fullName>
        <description>The name of the object the class should act on, for example, Account, Contact, Opportunity.</description>
        <inlineHelpText>The name of the object the class should act on, for example, Account, Contact, Opportunity.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Load_Order__c</fullName>
        <description>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
        <inlineHelpText>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</inlineHelpText>
        <label>Load Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</description>
        <inlineHelpText>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</inlineHelpText>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Filter_Field__c</fullName>
        <description>The name of the field used for filtering.</description>
        <inlineHelpText>The name of the field used for filtering.</inlineHelpText>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Filter_Value__c</fullName>
        <description>The value of the field used for filtering.</description>
        <inlineHelpText>The value of the field used for filtering.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__User_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, we no longer push updates to this Trigger Handler. Select this option if you&apos;ve made changes that you don&apos;t want us to overwrite.</description>
        <inlineHelpText>When selected, we no longer push updates to this Trigger Handler. Select this option if you&apos;ve made changes that you don&apos;t want us to overwrite.</inlineHelpText>
        <label>User Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Trigger_Action__c</fullName>
        <description>The context in which this class should run, for example, before a record is inserted, after a record is deleted, etc.</description>
        <inlineHelpText>The context in which this class should run, for example, before a record is inserted, after a record is deleted, etc.</inlineHelpText>
        <label>Trigger Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BeforeInsert</fullName>
                </value>
                <value>
                    <fullName>BeforeUpdate</fullName>
                </value>
                <value>
                    <fullName>BeforeDelete</fullName>
                </value>
                <value>
                    <fullName>AfterInsert</fullName>
                </value>
                <value>
                    <fullName>AfterUpdate</fullName>
                </value>
                <value>
                    <fullName>AfterDelete</fullName>
                </value>
                <value>
                    <fullName>AfterUndelete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Owned_by_Namespace__c</fullName>
        <description>The namespace of the package or Org that will control this Trigger handler.</description>
        <inlineHelpText>The namespace of the package or Org that controls this Trigger Handler.</inlineHelpText>
        <label>Owned by Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Usernames_to_Exclude__c</fullName>
        <description>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</description>
        <inlineHelpText>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</inlineHelpText>
        <label>Usernames to Exclude</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>hed__All_Main_Fields</fullName>
        <columns>NAME</columns>
        <columns>hed__Class__c</columns>
        <columns>hed__Object__c</columns>
        <columns>hed__Active__c</columns>
        <columns>hed__Load_Order__c</columns>
        <columns>hed__User_Managed__c</columns>
        <columns>hed__Owned_by_Namespace__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Main Fields</label>
    </listViews>
</CustomObject>